# webauthn

./: draft-hodges-webauthn-registries.html  draft-jones-webauthn-secp256k1.xml  index.bs  w3c.json
publish/WD-webauthn-20170505/: index.html
test-vectors/: README.md  inject-generated-content.sh  pyproject.toml
