[project]
name = "webauthn-test-vectors"
description = "Scripts for generating WebAuthn test vectors"
requires-python = ">=3.10, <4"

[tool.poetry]
package-mode = 

[tool.poetry.dependencies]
asn1 = "^3.0.1"
cryptography = "^44.0.3"
fido2 = "^2.0.0"

[build-system]
requires = 
build-backend = "poetry.core.masonry.api"
